// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditWorklistTab Tests rendering Audit worklist component Renders completed Audit worklist items 1`] = `
<React.Fragment>
  <FlatList
    data={
      Array [
        Object {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "itemCount": 1,
          "worklistType": "CATEGORY",
        },
        Object {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "completed": true,
          "completedTs": "2022-09-15T13:32:41+05:30",
          "completedUserId": "vn51wu8",
          "itemName": "BAKERY ITEM",
          "itemNbr": 123789456,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "111122223333",
          "worklistType": "RA",
        },
        Object {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "itemCount": 2,
          "worklistType": "CATEGORY",
        },
        Object {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": true,
          "completedTs": "2022-09-15T13:32:41+05:30",
          "completedUserId": "vn51wu8",
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567890,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559999",
          "worklistType": "AU",
        },
        Object {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": true,
          "completedTs": "2022-09-15T13:32:41+05:30",
          "completedUserId": "vn51wu8",
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567899,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559934",
          "worklistType": "AU",
        },
        Object {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "itemCount": 1,
          "worklistType": "CATEGORY",
        },
        Object {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "completed": true,
          "completedTs": "2022-09-15T13:32:41+05:30",
          "completedUserId": "vn51wu8",
          "itemName": "ELECTRONIC ITEM",
          "itemNbr": 987654321,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "777555333",
          "worklistType": "AU",
        },
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[Function]}
    refreshing={false}
    renderItem={[Function]}
    windowSize={3}
  />
</React.Fragment>
`;

exports[`AuditWorklistTab Tests rendering Audit worklist component Renders to-do Audit worklist items 1`] = `
<React.Fragment>
  <FlatList
    data={
      Array [
        Object {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "itemCount": 1,
          "worklistType": "CATEGORY",
        },
        Object {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "BAKERY ITEM",
          "itemNbr": 123789456,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "111122223333",
          "worklistType": "RA",
        },
        Object {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "itemCount": 2,
          "worklistType": "CATEGORY",
        },
        Object {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567890,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559999",
          "worklistType": "AU",
        },
        Object {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567899,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559934",
          "worklistType": "AU",
        },
        Object {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "itemCount": 1,
          "worklistType": "CATEGORY",
        },
        Object {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "ELECTRONIC ITEM",
          "itemNbr": 987654321,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "777555333",
          "worklistType": "AU",
        },
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[Function]}
    refreshing={false}
    renderItem={[Function]}
    windowSize={3}
  />
</React.Fragment>
`;

exports[`Tests rendering Filter \`Pills\` Renders a filter button for list filter type AREA 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0071e9",
      "borderRadius": 20,
      "flexDirection": "row",
      "height": 30,
      "justifyContent": "center",
      "marginHorizontal": 5,
      "marginVertical": 10,
      "paddingHorizontal": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffffffff",
        "paddingHorizontal": 10,
      }
    }
  >
    ELECTRONICS
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    testID="button"
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="close-circle"
      size={20}
    />
  </TouchableOpacity>
</View>
`;

exports[`Tests rendering Filter \`Pills\` Renders a filter button for list filter type CATEGORY  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0071e9",
      "borderRadius": 20,
      "flexDirection": "row",
      "height": 30,
      "justifyContent": "center",
      "marginHorizontal": 5,
      "marginVertical": 10,
      "paddingHorizontal": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffffffff",
        "paddingHorizontal": 10,
      }
    }
  >
    99 - ELECTRONICS
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    testID="button"
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="close-circle"
      size={20}
    />
  </TouchableOpacity>
</View>
`;

exports[`Tests rendering Filter \`Pills\` Renders a filter button for list filter type EXCEPTION 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0071e9",
      "borderRadius": 20,
      "flexDirection": "row",
      "height": 30,
      "justifyContent": "center",
      "marginHorizontal": 5,
      "marginVertical": 10,
      "paddingHorizontal": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffffffff",
        "paddingHorizontal": 10,
      }
    }
  >
    [missing "en.EXCEPTION.ROLLOVER_AUDITS" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    testID="button"
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="close-circle"
      size={20}
    />
  </TouchableOpacity>
</View>
`;

exports[`Tests rendering Filter \`Pills\` Renders empty view element for invalid list filter type 1`] = `<View />`;

exports[`Tests rendering Filter \`Pills\` Renders empty view element for non-existing EXCEPTION value 1`] = `<View />`;
